[package]
name = "wtransport-examples-8bytesmsg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "8bytesmsg"

[dependencies]
anyhow = "1.0.71"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.19.0"
tracing-subscriber = "0.3.17"
wtransport = { git = "https://github.com/BiagioFesta/wtransport.git", branch = "master" }
wtransport-examples-utilities = { path = "../utilities" }
