[package]
name = "wtransport-examples-mediaoverweb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mediaoverweb"

[dependencies]
anyhow = "1.0.71"
openh264 = "0.4.1"
tiny-skia = { version = "0.10.0" }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
wtransport = { git = "https://github.com/BiagioFesta/wtransport.git", branch = "master" }
wtransport-examples-utilities = { path = "../utilities" }
